<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/home" />

    <item
        android:id="@+id/nav_favorites"
        android:icon="@drawable/ic_favorite_black_24dp"
        android:title="@string/fav" />

    <item
        android:id="@+id/nav_cons"
        android:icon="@drawable/ic_people_black_24dp"
        android:title="@string/cons" />


    <item
        android:id="@+id/nav_instit"
        android:icon="@drawable/ic_domain_black_24dp"
        android:title="@string/instit" />


    <item
        android:id="@+id/nav_Massages"
        android:icon="@drawable/ic_message_black_24dp"
        android:title="@string/massg" />
</menu>